2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/io_pci.cdl: Fix doc link.

2003-02-21  Gary Thomas  <gary@mlbassoc.com>

	* src/pci.c (cyg_pci_get_device_info): While scanning active
	devices, remember the I/O and memory addresses they use.  This
	allows for new devices to be added which will not conflict.

2003-02-20  Gary Thomas  <gary@mlbassoc.com>

	* tests/pcihdr.h: Update to latest published version.

2002-05-14  Jesper Skov  <jskov@redhat.com>

	* tests/pci1.c: Fix warning.

2002-02-13  Hugo Tyson  <hmt@redhat.com>

	* doc/pci.sgml: Tidy up some typos and PROGRAMLISTING width
	issues.

2002-02-11  Mark Salter  <msalter@redhat.com>

	* doc/pci.sgml: Brought docs up to date with current code.

2002-01-31  Mark Salter  <msalter@redhat.com>

	* src/pci.c (cyg_pci_init): Set default memory and io bases here
	as the HAL_PCI_ALLOC_BASE_* macros may not be static values.

2002-01-21  Mark Salter  <msalter@redhat.com>

	* src/pci.c (cyg_pci_get_device_info): Fix setting of upper 32 bits
	for 64-bit BAR.

2001-09-28  Gary Thomas  <gthomas@redhat.com>

	* src/pci.c (cyg_pci_find_next): 
	* include/pci.h: Allow platforms to restrict PCI bus/device ranges.

2001-08-22  Gary Thomas  <gthomas@redhat.com>

	* src/pci.c: 
	printf() is no longer a part of RedBoot.  Thus all programs
	must use diag_printf() and related functions instead.

2001-02-28  Hugo Tyson  <hmt@redhat.com>

	* tests/pci1.c (pci_scan): Added a new function to re-scan the
	device list after configuring to let a human confirm that we truly
	are seeing distinct devices - ie. do they retain their distinct
	resource allocations in the BARs?  This was useful to me in
	investigating a recalcitrant target...

2001-02-02  Jesper Skov  <jskov@redhat.com>

	* tests/pci2.c (pci_test): Removed bogus check for 1MB IO limit.

2001-01-10  Jesper Skov  <jskov@redhat.com>

	* src/pci.c (cyg_pci_get_device_info): Do correct casting of
	header_type. Do not make assumptions about structure layout.
